src/sass/formio.form.scss
@import './formio.embed.scss';
$dialog-z-index: 10000;
$autocomplete-in-dialog-z-index: $dialog-z-index + 1000;

.formio-form {
  position: relative;
  min-height: 80px;
}

.formio-error-wrapper,
.formio-warning-wrapper {
  padding: 1em;
}

.formio-error-wrapper {
  color: #721c24;
  background-color: #f8d7da;
  border-color: #f5c6cb;
}

.formio-warning-wrapper {
  color: #856404;
  background-color: #fff3cd;
  border-color: #ffeeba;
}

.formio-disabled-input .form-control.flatpickr-input {
  background-color: #eee;
}

.builder-component.has-error .invalid-feedback,
.formio-component.has-error .invalid-feedback,
.formio-component.alert-danger .invalid-feedback,
.formio-component.has-message .invalid-feedback {
  display: block;
  color: inherit;
  margin-top: 4px;
}

.formio-errors {
  .error {
    color: #dc3545;
  }
  .warning {
    color: #856404;
  }
  .info {
    color: #004085;
  }
}

.formio-wysiwyg-editor {
  min-height: 200px;
  background-color: #fff;
}

.has-feedback .form-control {
  padding-right: 10px;
}

.has-feedback .form-control[type=hidden] {
  padding-right: 0px;
}

.has-error.bg-danger {
  padding: 4px;
}

.ql-source:after {
  content: "[source]";
  white-space: nowrap;
}

.quill-source-code {
  width: 100%;
  margin: 0px;
  background: rgb(29, 29, 29);
  box-sizing: border-box;
  color: rgb(204, 204, 204);
  font-size: 15px;
  outline: none;
  padding: 20px;
  line-height: 24px;
  font-family: Consolas, Menlo, Monaco, "Courier New", monospace;
  position: absolute;
  top: 0;
  bottom: 0;
  border: none;
  display:none;
}

.formio-component-tags tags {
  background-color: #fff;
}

.field-required:after, .tab-error::after {
  content:" *";
  color:red;
}

.field-required:after {
  position: relative;
  z-index: 10;
}

.glyphicon-spin {
  -webkit-animation: formio-spin 1s infinite linear;
  -moz-animation: formio-spin 1s infinite linear;
  -o-animation: formio-spin 1s infinite linear;
  animation: formio-spin 1s infinite linear;
}

@-moz-keyframes formio-spin {
  from {
    -moz-transform: rotate(0deg);
  }
  to {
    -moz-transform: rotate(360deg);
  }
}

@-webkit-keyframes formio-spin {
  from {
    -webkit-transform: rotate(0deg);
  }
  to {
    -webkit-transform: rotate(360deg);
  }
}

@keyframes formio-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.button-icon-right {
  margin-left: 5px;
}

.formio-component-submit .submit-success::after {
  content: '\2713';
  position: relative;
  right: -4px;
  top: 1px;
  line-height: 1;
}

.formio-component-submit .submit-fail::after {
  content: '\2717';
  position: relative;
  right: -4px;
  top: 1px;
  line-height: 1;
}


.card-vertical {
  display: flex;
  flex-direction: row;
  margin-top: 5px;
}

.nav-tabs-vertical {
  display: flex;
  flex-direction: column;
  border-right: 1px solid #ddd;
  padding-left: 5px;
  margin-right: 10px;
  border-bottom: 0;
}

.card-vertical ul>li>.nav-link-vertical  {
  border-right-color: transparent;
  border-radius: 4px 0 0 4px;
  margin-right: 0;

  &.active {
    border-bottom-color: #ddd;
    border-right-color: transparent;

    &:hover {
      border-right-color: transparent;
    }
  }
}

.nav-tabs-vertical>li {
  margin: 0 -1px 0 0;
}

.formio-component-submit .submit-fail[disabled] {
  opacity: 1;
}

.form-control.flatpickr-input {
  background-color: #fff;
}

td > .form-group {
  margin-bottom: 0;
}

.signature-pad-body {
  overflow: hidden;
  position: relative;
}

.signature-pad-canvas {
  border-radius: 4px;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.02) inset;
  border: 1px solid #f4f4f4;
}

.btn.signature-pad-refresh {
  position:absolute;
  left: 0;
  top: 0;
  z-index: 1000;
  padding: 3px;
  line-height: 0;
}

[dir="rtl"] .btn.signature-pad-refresh {
  left: unset;
  right: 0;
}

.formio-component-multiple .choices__input {
  width: 100%;
}

.choices__list--dropdown .choices__item--selectable{
  padding-right: 0px;
}

.signature-pad-refresh img {
  height: 1.2em;
}

.signature-pad-footer {
  text-align: center;
  color: #C3C3C3;
}

.choices__list--dropdown {
  z-index: 100;
}

.choices__list--multiple .choices__item {
  border-radius: 0;
  padding: 2px 8px;
  line-height: 1em;
  margin-bottom: 6px;
}

.choices__list--single {
  padding: 0;
}

.choices__item.choices__item--selectable {
  white-space: nowrap;
  overflow: hidden;
  padding-right: 25px;
  text-overflow: ellipsis;
}

.choices__input {
  padding: 2px;
}

/* fix for choices.js .choices__input container in rtl */
.choices[dir="rtl"] > * {
  text-align: right;
}
/* end fix for choices.js .choices__input container in rtl */

/* fix for choices.js deletable items in rtl */
.choices[dir="rtl"] .choices__list--multiple .choices__item[data-deletable] {
  padding-left: 5px;
  float: right;
}

.choices[dir="rtl"] .choices__list--multiple .choices__item[data-deletable] .choices__button {
  float: left;
  margin: 0 8px 0 -4px;
  padding-left: unset;
  padding-right: 16px;
  border-left: unset;
  border-right: 1px solid #008fa1;
  overflow: hidden;
}
/* end fix for choices.js deletable items in rtl */

@-moz-document url-prefix() {
  .choices__button {
    float: right;
  }
}

.formio-component-file .fileSelector {
  position: relative;
  padding: 15px;
  border: 2px dashed #ddd;
  text-align: center;

  .loader-wrapper {
    display: none;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.1);

    .loader {
      height: 45px;
      width: 45px;
      margin-top: -23px;
      margin-left: -23px;
    }
  }
}

.formio-component-file .fileSelector.fileDragOver {
  border-color: #127abe;
}

.formio-component-file .fileSelector .glyphicon, .formio-component-file .fileSelector .fa {
  font-size: 20px;
  margin-right: 5px;
}

[dir="rtl"] .formio-component-file .fileSelector .fa, [dir="rtl"] .formio-component-file .fileSelector .glyphicon {
  margin-right: unset;
  margin-left: 5px;
}

.formio-component-file .fileSelector .browse {
  cursor: pointer;
}
/* ... */

